--- a/haar/haar.vcxproj
+++ b/haar/haar.vcxproj
@@ -98,9 +98,9 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_ITERATOR_DEBUG_LEVEL=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\OCR\vsprojects\face_reco\swt;C:\opencv249\opencv\build\include;C:\opencv249\opencv\build\include\opencv2;C:\opencv249\opencv\build\include\opencv;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\OCR\boost_1_56_0\boost_1_56_0;C:\opencv249\opencv\build\include;C:\opencv249\opencv\build\include\opencv2;C:\opencv249\opencv\build\include\opencv;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -137,6 +137,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\OCR\boost_1_56_0\boost_1_56_0;C:\opencv249\opencv\build\include;C:\opencv249\opencv\build\include\opencv;C:\opencv249\opencv\build\include\opencv2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -144,10 +145,15 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>opencv_stitching249.lib;opencv_contrib249.lib;opencv_videostab249.lib;opencv_superres249.lib;opencv_nonfree249.lib;opencv_gpu249.lib;opencv_ocl249.lib;opencv_legacy249.lib;opencv_ts249.lib;opencv_calib3d249.lib;opencv_features2d249.lib;opencv_objdetect249.lib;opencv_highgui249.lib;opencv_video249.lib;opencv_photo249.lib;opencv_imgproc249.lib;opencv_flann249.lib;opencv_ml249.lib;opencv_core249.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\opencv249\opencv\build\x64\vc11\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="textdetection_haar.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="textdetection_haar.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
