--- a/canny/canny.vcxproj
+++ b/canny/canny.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{79F23A76-F444-4E8C-B776-496D511E29E1}</ProjectGuid>
+    <ProjectGuid>{5AF359B0-0684-4D90-87D3-AEFD0799112A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>haar</RootNamespace>
+    <RootNamespace>canny</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -100,12 +100,10 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\OCR\boost_1_56_0\boost_1_56_0;C:\opencv249\opencv\build\include;C:\opencv249\opencv\build\include\opencv2;C:\opencv249\opencv\build\include\opencv;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\opencv249\opencv\build\x64\vc11\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opencv_stitching249d.lib;opencv_contrib249d.lib;opencv_videostab249d.lib;opencv_superres249d.lib;opencv_nonfree249d.lib;opencv_gpu249d.lib;opencv_ocl249d.lib;opencv_legacy249d.lib;opencv_ts249d.lib;opencv_calib3d249d.lib;opencv_features2d249d.lib;opencv_objdetect249d.lib;opencv_highgui249d.lib;opencv_video249d.lib;opencv_photo249d.lib;opencv_imgproc249d.lib;opencv_flann249d.lib;opencv_ml249d.lib;opencv_core249d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -137,23 +135,19 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\OCR\liuliu-ccv-a11f7b0\lib;C:\OCR\boost_1_56_0\boost_1_56_0;C:\opencv249\opencv\build\include;C:\opencv249\opencv\build\include\opencv;C:\opencv249\opencv\build\include\opencv2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\opencv249\opencv\build\include;C:\opencv249\opencv\build\include\opencv;C:\opencv249\opencv\build\include\opencv2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_stitching249.lib;opencv_contrib249.lib;opencv_videostab249.lib;opencv_superres249.lib;opencv_nonfree249.lib;opencv_gpu249.lib;opencv_ocl249.lib;opencv_legacy249.lib;opencv_ts249.lib;opencv_calib3d249.lib;opencv_features2d249.lib;opencv_objdetect249.lib;opencv_highgui249.lib;opencv_video249.lib;opencv_photo249.lib;opencv_imgproc249.lib;opencv_flann249.lib;opencv_ml249.lib;opencv_core249.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\opencv249\opencv\build\x64\vc11\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_stitching249.lib;opencv_contrib249.lib;opencv_videostab249.lib;opencv_superres249.lib;opencv_nonfree249.lib;opencv_gpu249.lib;opencv_ocl249.lib;opencv_legacy249.lib;opencv_ts249.lib;opencv_calib3d249.lib;opencv_features2d249.lib;opencv_objdetect249.lib;opencv_highgui249.lib;opencv_video249.lib;opencv_photo249.lib;opencv_imgproc249.lib;opencv_flann249.lib;opencv_ml249.lib;opencv_core249.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="textdetection_haar.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="textdetection_haar.h" />
+    <ClCompile Include="canny.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
