--- a/haar/haar.vcxproj
+++ b/haar/haar.vcxproj
@@ -155,6 +155,9 @@
   <ItemGroup>
     <ClInclude Include="textdetection_haar.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="SWT.m" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
