--- a/haar/haar.vcxproj
+++ b/haar/haar.vcxproj
@@ -157,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="SWT.m" />
+    <None Include="textdetect.m" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
