--- a/haar/haar.vcxproj.filters
+++ b/haar/haar.vcxproj.filters
@@ -34,5 +34,8 @@
     <None Include="SWT.m">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="textdetect.m">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
