--- a/haar/haar.vcxproj
+++ b/haar/haar.vcxproj
@@ -100,13 +100,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_ITERATOR_DEBUG_LEVEL=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\OCR\boost_1_56_0\boost_1_56_0;C:\opencv249\opencv\build\include;C:\opencv249\opencv\build\include\opencv2;C:\opencv249\opencv\build\include\opencv;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\OCR\vsprojects\tesseract-3.02.02-lib\tesseract-3.02.02-lib\include;C:\OCR\boost_1_56_0\boost_1_56_0;C:\opencv249\opencv\build\include;C:\opencv249\opencv\build\include\opencv2;C:\opencv249\opencv\build\include\opencv;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\opencv249\opencv\build\x64\vc11\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_stitching249.lib;opencv_contrib249.lib;opencv_videostab249.lib;opencv_superres249.lib;opencv_nonfree249.lib;opencv_gpu249.lib;opencv_ocl249.lib;opencv_legacy249.lib;opencv_ts249.lib;opencv_calib3d249.lib;opencv_features2d249.lib;opencv_objdetect249.lib;opencv_highgui249.lib;opencv_video249.lib;opencv_photo249.lib;opencv_imgproc249.lib;opencv_flann249.lib;opencv_ml249.lib;opencv_core249.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\OCR\vsprojects\tesseract-3.02.02-lib\tesseract-3.02.02-lib\lib;C:\opencv249\opencv\build\x64\vc11\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libtesseract302d.lib;opencv_stitching249.lib;opencv_contrib249.lib;opencv_videostab249.lib;opencv_superres249.lib;opencv_nonfree249.lib;opencv_gpu249.lib;opencv_ocl249.lib;opencv_legacy249.lib;opencv_ts249.lib;opencv_calib3d249.lib;opencv_features2d249.lib;opencv_objdetect249.lib;opencv_highgui249.lib;opencv_video249.lib;opencv_photo249.lib;opencv_imgproc249.lib;opencv_flann249.lib;opencv_ml249.lib;opencv_core249.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -135,17 +135,17 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;USE_STD_NAMESPACE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\OCR\liuliu-ccv-a11f7b0\lib;C:\OCR\boost_1_56_0\boost_1_56_0;C:\opencv249\opencv\build\include;C:\opencv249\opencv\build\include\opencv;C:\opencv249\opencv\build\include\opencv2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\OCR\vsprojects\tesseract-3.02-lib\include;C:\OCR\boost_1_56_0\boost_1_56_0;C:\opencv249\opencv\build\include;C:\opencv249\opencv\build\include\opencv;C:\opencv249\opencv\build\include\opencv2;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_stitching249.lib;opencv_contrib249.lib;opencv_videostab249.lib;opencv_superres249.lib;opencv_nonfree249.lib;opencv_gpu249.lib;opencv_ocl249.lib;opencv_legacy249.lib;opencv_ts249.lib;opencv_calib3d249.lib;opencv_features2d249.lib;opencv_objdetect249.lib;opencv_highgui249.lib;opencv_video249.lib;opencv_photo249.lib;opencv_imgproc249.lib;opencv_flann249.lib;opencv_ml249.lib;opencv_core249.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\opencv249\opencv\build\x64\vc11\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>liblept168.lib;libtesseract302.lib;opencv_stitching249.lib;opencv_contrib249.lib;opencv_videostab249.lib;opencv_superres249.lib;opencv_nonfree249.lib;opencv_gpu249.lib;opencv_ocl249.lib;opencv_legacy249.lib;opencv_ts249.lib;opencv_calib3d249.lib;opencv_features2d249.lib;opencv_objdetect249.lib;opencv_highgui249.lib;opencv_video249.lib;opencv_photo249.lib;opencv_imgproc249.lib;opencv_flann249.lib;opencv_ml249.lib;opencv_core249.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\OCR\vsprojects\tesseract-3.02-lib\prebuilt\x64;C:\opencv249\opencv\build\x64\vc11\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
